--- a/client/src/app/components/partials/admin/admin.component.html
+++ b/client/src/app/components/partials/admin/admin.component.html
@@ -53,7 +53,7 @@
                     </li>
                     <li class="sidebar-dropdown">
                         <a routerLinkActive="active" 
-                        [routerLinkActiveOptions]="{exact: true}" routerLink="/">
+                        [routerLinkActiveOptions]="{exact: true}" routerLink="/admin/reservation">
                             <i class="fas fa-book-open"></i>
                             <span>Reservas</span>
                         </a>
