--- a/client/src/app/components/reservation/reservation/reservation.component.html
+++ b/client/src/app/components/reservation/reservation/reservation.component.html
@@ -85,9 +85,9 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <ngb-pagination class="d-flex justify-content-center" [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
-        </ngb-pagination> 
+            <ngb-pagination class="d-flex justify-content-end" [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
+            </ngb-pagination>
+        </div> 
     </div>
 </body>
 
