--- a/client/src/app/components/admin/main/main.component.html
+++ b/client/src/app/components/admin/main/main.component.html
@@ -30,7 +30,7 @@
                         <div align="center">
                                 {{counts.reservCount}} Reservas</div>
                     </div>
-                    <a class="card-footer text-white clearfix small z-1" routerLink="/admin/reserv">
+                    <a class="card-footer text-white clearfix small z-1" routerLink="/admin/reservation">
                         <span class="float-left">Ver detalles</span>
                         <span class="float-right">
                                     <i class="fas fa-angle-right"></i>
@@ -104,6 +104,153 @@
                                             <i class="fas fa-angle-right"></i>
                                         </span>
                     </a>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <div class="card-header bg-dark text-white">
+                <div class="text-center" style="width: 50%; position: absolute; margin-left: 3cm;" >
+                    <flash-messages></flash-messages>
+                </div>
+                <i class="fas fa-dollar-sign"></i> Reservas y ganancias por mes
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Año</th>
+                                <th scope="col">Mes</th>
+                                <th scope="col">Reservas totales</th>
+                                <th scope="col">Reservas Fútbol</th>
+                                <th scope="col">Reservas Basket</th>
+                                <th scope="col">Reservas Tenis</th>
+                                <th scope="col">Reservas Web</th>
+                                <th scope="col">Reservas Telefono</th>
+                                <th scope="col">Ganancias</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let total of totalPag">
+                                <th>
+                                    {{total.Anio}}    
+                                </th>
+                                <td *ngIf="total.Mes == 'January'">
+                                    Enero 
+                                </td>
+                                <td *ngIf="total.Mes == 'Febrery'">
+                                    Febrero 
+                                </td>
+                                <td *ngIf="total.Mes == 'March'">
+                                    Marzo 
+                                </td>
+                                <td *ngIf="total.Mes == 'April'">
+                                    Abril 
+                                </td>
+                                <td *ngIf="total.Mes == 'May'">
+                                    Mayo 
+                                </td>
+                                <td *ngIf="total.Mes == 'June'">
+                                    Junio 
+                                </td>
+                                <td *ngIf="total.Mes == 'July'">
+                                    Julio 
+                                </td>
+                                <td *ngIf="total.Mes == 'August'">
+                                    Agosto 
+                                </td>
+                                <td *ngIf="total.Mes == 'September'">
+                                    Septiembre 
+                                </td>
+                                <td *ngIf="total.Mes == 'October'">
+                                    Octubre 
+                                </td>
+                                <td *ngIf="total.Mes == 'November'">
+                                    Noviembre 
+                                </td>
+                                <td *ngIf="total.Mes == 'December'">
+                                    Diciembre 
+                                </td>
+                                <td>
+                                    {{total.Cantidad_total_de_Reservas}}     
+                                </td>
+                                <td>
+                                    {{total.cant_reservas_futbol}} 
+                                </td>
+                                <td>
+                                    {{total.cant_reservas_basket}} 
+                                </td>
+                                <td>
+                                    {{total.cant_reservas_tenis}} 
+                                </td>
+                                <td>
+                                    {{total.cant_reservas_clientes}} 
+                                </td>
+                                <td>
+                                    {{total.cant_reservas_admin}} 
+                                </td>
+                                <td>
+                                    ${{total.ganancias}} 
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="d-flex justify-content-end p-2">
+                        <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
+                        </ngb-pagination>
+                    </div> 
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <div class="card-header bg-dark text-white">
+                <div class="text-center" style="width: 50%; position: absolute; margin-left: 3cm;" >
+                    <flash-messages></flash-messages>
+                </div>
+                <i class="fas fa-dollar-sign"></i> Concurrencia y ganancias por horarios
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th scope="col">Horario</th>
+                                <th scope="col">Reservas</th>
+                                <th scope="col">Reservas Fútbol</th>
+                                <th scope="col">Reservas Basket</th>
+                                <th scope="col">Reservas Tenis</th>
+                                <th scope="col">Ganancias</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let sched of schedsPag">
+                                <th>
+                                    {{sched.hora_inicio}}-{{sched.hora_termino}}    
+                                </th>
+                                <td>
+                                    {{sched.reservas_en_horario}}     
+                                </td>
+                                <td>
+                                    {{sched.cant_reservas_futbol}} 
+                                </td>
+                                <td>
+                                    {{sched.cant_reservas_basket}} 
+                                </td>
+                                <td>
+                                    {{sched.cant_reservas_tenis}} 
+                                </td>
+                                <td>
+                                    ${{sched.ganancias}} 
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="d-flex justify-content-end p-2">
+                        <ngb-pagination [collectionSize]="collectionSizeS" [(page)]="pageS" [pageSize]="pageSizeS">
+                        </ngb-pagination>
+                    </div> 
                 </div>
             </div>
         </div>
