--- a/client/src/app/components/admin/scheds/scheds-list/scheds-list.component.html
+++ b/client/src/app/components/admin/scheds/scheds-list/scheds-list.component.html
@@ -38,16 +38,8 @@
                                 <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
                             </tr>
                         </thead>
-                        <tfoot>
-                            <tr>
-                                <th scope="col">ID</th>
-                                <th scope="col">Hora inicio</th>
-                                <th scope="col">Hora termino</th>
-                                <th scope="col" colspan="2" style="text-align:center;">Acciones</th>
-                            </tr>
-                        </tfoot>
                         <tbody>
-                            <tr *ngFor="let sched of scheds">
+                            <tr *ngFor="let sched of schedsPag">
                                 <th>
                                     {{sched.id_horario}}
                                 </th>
@@ -66,6 +58,10 @@
                             </tr>
                         </tbody>
                     </table>
+                    <div class="d-flex justify-content-end p-2">
+                        <ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize">
+                        </ngb-pagination>
+                    </div> 
                 </div>
             </div>
         </div>
